[project]
name = "continuous_tepai"
version = "0.1.0"
description = "Backend-agnostic Continuous TE-PAI for randomized Hamiltonian simulation"
readme = "README.md"
authors = [
    { email = "c.kiumi.oval17@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
qiskit = [
    "qiskit>=2.3.1",
    "qiskit-aer>=0.15",
]
qulacs = [
    "qulacs>=0.6.13",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "tqdm>=4.67.3",
]

